--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.25.0",
     "ganache-cli": "^6.0.3",
-    "mocha": "^4.0.1",
-    "solc": "^0.4.19",
-    "truffle-hdwallet-provider": "0.0.3",
-    "web3": "^1.0.0-beta.26"
+    "mocha": "^9.2.0",
+    "solc": "^0.8.11",
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "jest": "^27.4.7"
